[tool.poetry]
name = "phomo"
version = "0.1.0"
description = "Python package and CLI utility to create photo mosaics."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/loiccoyle/phomo"
keywords = ["photomosaic", "photographic", "mosaic", "art", "image"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Artistic Software",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
Pillow = "^8.2.0"
numpy = "^1.20.2"
tqdm = "^4.60.0"
matplotlib = "^3.4.1"
typing-extensions = { version = "^3.10.0", markers = "python_version ~= '3.7'"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
phomo = 'phomo.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
