[tool.poetry]
name = "phomo"
version = "0.4.0"
description = "Python package and CLI utility to create photo mosaics."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/loiccoyle/phomo"
keywords = ["photomosaic", "photographic", "mosaic", "art", "image"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Artistic Software",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Pillow = ">=8.2,<10.0"
numpy = "^1.22.0"
tqdm = "^4.60.0"
matplotlib = "^3.4.1"
scipy = "^1.11.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.4"
pytest = "^7.2.0"

[tool.poetry.scripts]
phomo = 'phomo.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
