[tool.poetry]
name = "phomo"
version = "1.2.0"
description = "Python package and CLI utility to create photo mosaics."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/loiccoyle/phomo"
keywords = ["photomosaic", "photographic", "mosaic", "art", "image"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Artistic Software",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pillow = "^10.0.1"
numpy = "^2.0.0"
tqdm = "^4.60.0"
matplotlib = "^3.4.1"
scipy = "^1.11.2"

numba = { version = "^0.60.0", optional = true }
opencv-python = "^4.10.0.84"

[tool.poetry.extras]
cuda = ["numba"]

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.4"
pytest = "^7.2.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
mkdocs-jupyter = "^0.24.7"
mkdocstrings = { extras = ["python"], version = "^0.25.1" }
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"

[tool.poetry.scripts]
phomo = 'phomo.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
